# plasma-bitwarden

./: CMakeLists.txt  Messages.sh  install.sh  preview.sh  run.sh
package/: metadata.desktop
package/contents/ui/: CompactRepresentation.qml  FullRepresentation.qml  LoadingPage.qml  LoginPage.qml  Menu.qml  PasswordItemDelegate.qml  PasswordPage.qml  main.qml
plugin/: CMakeLists.txt  bitwardenvault.cpp  bitwardenvault.h  passwordsmodel.cpp  passwordsmodel.h  plasmabitwardenplugin.cpp  plasmabitwardenplugin.h  qmldir  secretprovider.cpp  secretprovider.h
